# cartorio-mosaico

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/api/: admin_imports.py  auditorias.py  auth.py  deps.py  lotes.py  matriculas.py  memoriais.py  mosaico.py
backend/src/app/db/: base.py
backend/src/app/db/migrations/: env.py
backend/src/app/db/migrations/versions/: 20260507_0000_0001_initial.py  20260508_0000_0002_multitenant.py  20260509_0000_0003_gist_indexes.py  20260510_0000_0004_audit_index.py  20260511_0000_0005_import_jobs.py  20260512_0000_0006_audit_backfill.py  20260513_0000_0007_drop_redundant_gist.py
backend/src/app/middleware/: audit.py
backend/src/app/models/: audit_log.py  confrontante.py  import_job.py  lote_geometria.py  matricula.py  tenant.py  usuario.py
backend/src/app/schemas/: auditoria.py  auth.py  import_job.py  lote.py  matricula.py
backend/src/app/services/: auth.py  confrontantes.py  croqui.py  croqui_satellite.py  geo.py  memorial.py  security.py  topology.py  validacao.py
backend/src/app/services/importers/: __init__.py  base.py  cri_source.py  csv_source.py  eprotocolo_source.py
backend/tests/: conftest.py  test_integration_confrontantes.py  test_integration_matriculas.py  test_integration_multitenant.py  test_smoke.py
docs/: ARQUITETURA.md  DEPLOY-FREE.md  DEPLOY.md  LGPD.md  MEMORIAL_TEMPLATE.md
frontend/: Dockerfile  README.md  index.html  (+4 more)
(+12 files in other folders)
